adding the models for the AgentInterfaces.